clusters/moo-cluster/deis/controller-api-server-ingress-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    meta.helm.sh/release-name: hephy
    meta.helm.sh/release-namespace: deis
  labels:
    app: controller
    app.kubernetes.io/managed-by: Helm
    chart: controller-v2.21.3
    heritage: Helm
    release: hephy
  name: controller-api-server-ingress-http
  namespace: deis
spec:
  rules:
  - host: deis.jk.diversek8s.io
    http:
      paths:
      - backend:
          service:
            name: deis-controller
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - deis.jk.diversek8s.io
    secretName: deis-controller-tls
